Fix gap

--- a/src/pages/Home/Hero/styles.module.scss
+++ b/src/pages/Home/Hero/styles.module.scss
@@ -87,7 +87,7 @@
   }
 
   @media (orientation: portrait) {
-    height: 80%;
+    height: 80vh;
 
     .foreground {
       flex-direction: row-reverse;
